improve UI, batch elevation requests, points calculation improvements

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,6 +21,4 @@ checksum:
   name_template: 'checksums.txt'
 archives:
   - name_template: "gpsd-simulator_{{ .Os }}_{{ .Arch }}"
-    format: tar.gz
-    files:
-      - ./dist/gpsd-simulator
+    formats: [tar.gz]
